--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <header>
     <h1>About Me</h1>
   </header>
-  <p>Hello my name is Reece Renninger and welcome to my About Me page.  I served in the United States Marine Corps from 2012 to 2016 and exited as a Sergeant. I then went to California State University Long Beach and got my BA in Psychology.  I am making this career transition because coding is something I have always wanted to pursue and I decided I didn't want to wait any longer. </p>
-
-  <footer></footer>
+  <main>
+  <p>Hello my name is Reece Renninger and welcome to my About Me page.  I served in the United States Marine Corps from 2012 to 2016 and exited as a Sergeant. I then went to California State University Long Beach and got my BA in Psychology. After graduating I began working as an Academic Advisor for a university.  My goal with Code Fellows is to become an efficient coder to break into the tech industry so I can have the job I have always dreamed about.  </p>
+  </main>
+  <footer>Author: Reece R.</footer>
   <script src="js/app.js"></script>
 </body>
 </html>
