added image, updated with fontawesome, fixed console logs

--- a/index.html
+++ b/index.html
@@ -7,14 +7,28 @@
   <title>About Me</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/fe2b6661aa.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
     <h1>About Me</h1>
   </header>
   <main>
+    <i class="fa-solid fa-wand-magic-sparkles"></i>
+
+    <img id="selfiePic" src="img/alpacaAndMe.jpg" alt="alpacaLife">
+
   <p>Hello my name is Reece Renninger and welcome to my About Me page.  I served in the United States Marine Corps from 2012 to 2016 and exited as a Sergeant. I then went to California State University Long Beach and got my BA in Psychology. After graduating I began working as an Academic Advisor for a university.  My goal with Code Fellows is to become an efficient coder to break into the tech industry so I can have the job I have always dreamed about.  </p>
+  
   </main>
+  <ul>
+    <li>
+      <i class="fa-brands fa-github"><a href="https://github.com/ReeceRenninger">My GitHub</a></i>
+    </li>
+    <li>
+      <i class="fa-brands fa-linkedin"><a href="https://www.linkedin.com/in/reecerenninger/">My LinkedIn</a></i>
+    </li>
+  </ul>
   <footer>Author: Reece R.</footer>
   <script src="js/app.js"></script>
 </body>
