updated prompt answers, styling, and changed bio info

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <h1>About Me</h1>
   </header>
   <main>
-    <i class="fa-solid fa-wand-magic-sparkles"></i>
+    
 
     <img id="selfiePic" src="img/alpacaAndMe.jpg" alt="alpacaLife">
-
-  <p>Hello my name is Reece Renninger and welcome to my About Me page.  I served in the United States Marine Corps from 2012 to 2016 and exited as a Sergeant. I then went to California State University Long Beach and got my BA in Psychology. After graduating I began working as an Academic Advisor for a university.  My goal with Code Fellows is to become an efficient coder to break into the tech industry so I can have the job I have always dreamed about.  </p>
-  
+    <i class="fa-solid fa-headset"></i>
+  <p>Hello my name is Reece Renninger and welcome to my About Me page.  I served in the United States Marine Corps from 2012 to 2016 and exited as a Sergeant. I then went to California State University Long Beach and got my BA in Psychology. After graduating I began working as an Academic Advisor for a university.  My goal with Code Fellows is to become an efficient coder to break into the tech industry so I can have the career I have always dreamed about.  </p>
+  <i class="fa-solid fa-gamepad"></i>
   </main>
   <ul>
     <li>
