adjusting html structure

--- a/index.html
+++ b/index.html
@@ -23,22 +23,20 @@
   <p>Hello my name is Reece Renninger and welcome to my About Me page.  I served in the United States Marine Corps from 2012 to 2016 and exited as a Sergeant. I then went to California State University Long Beach and got my BA in Psychology. After graduating I began working as an Academic Advisor for a university.  My goal with Code Fellows is to become an efficient coder to break into the tech industry so I can have the career I have always dreamed about.  </p>
 
   <h2>Experience</h2>
-  <ul class="a">
-  <li> 
-    Academic Advisor for Concordia University, Irvine </li>
-  <li> 
-    Sergeant of the United States Marine Corps as an 0311, Infantry Rifleman
-  </li>
-  </ul>
+  <section class="a">
+    <ul>
+      <li>Academic Advisor for Concordia University, Irvine </li>
+      <li>Sergeant of the United States Marine Corps as an 0311, Infantry Rifleman</li>
+    </ul>
+  </section>
 
   <h2>Education</h2>
-  <ul class="b">
-  <li> 
-  Code Fellows, JavaScript developer 
-  Bachelor of Arts in Psychology focusing on trauma
-  </li>
-  </ul>
-  
+  <section class="b">
+    <ul>
+      <li> Code Fellows, JavaScript developer </li>
+      <li>Bachelor of Arts in Psychology focusing on trauma</li>
+    </ul>
+  </section>
 
   <i class="fa-solid fa-gamepad"></i>
   </main>
