added bullets, added content, added questions

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>About Me</title>
+
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/fe2b6661aa.js" crossorigin="anonymous"></script>
+  
 </head>
+
 <body>
   <header>
     <h1>About Me</h1>
@@ -18,7 +22,7 @@
 
     <img id="selfiePic" src="img/alpacaAndMe.jpg" alt="alpacaLife">
     <i class="fa-solid fa-headset"></i>
-
+  
   <h2>Biography</h2>
   <p>Hello my name is Reece Renninger and welcome to my About Me page.  I served in the United States Marine Corps from 2012 to 2016 and exited as a Sergeant. I then went to California State University Long Beach and got my BA in Psychology. After graduating I began working as an Academic Advisor for a university.  My goal with Code Fellows is to become an efficient coder to break into the tech industry so I can have the career I have always dreamed about.  </p>
 
@@ -31,15 +35,33 @@
   </section>
 
   <h2>Education</h2>
-  <section class="b">
+  
     <ul>
       <li> Code Fellows, JavaScript developer </li>
       <li>Bachelor of Arts in Psychology focusing on trauma</li>
     </ul>
+  
+
+</main>
+
+  
+  <i class="fa-solid fa-gamepad"></i>
+  <h2>Top Ten Video Games</h2>
+  <section id="topTen">
+  <ol>
+    <li>Control</li>
+    <li>Alan Wake</li>
+    <li>Warhammer: Vermintide 2</li>
+    <li>Grim Dawn</li>
+    <li>Borderlands 2</li>
+    <li>Elden Ring</li>
+    <li>Remnant: From the Ashes</li>
+    <li>Deep Rock Galactic</li>
+    <li>Terraria</li>
+    <li>Dungeon Defenders</li>
+  </ol>
   </section>
 
-  <i class="fa-solid fa-gamepad"></i>
-  </main>
   <ul>
     <li>
       <i class="fa-brands fa-github"><a href="https://github.com/ReeceRenninger">My GitHub</a></i>
@@ -49,6 +71,6 @@
     </li>
   </ul>
   <footer>Author: Reece R.</footer>
-  <script src="js/app.js"></script>
+  <!-- <script src="js/app.js"></script> -->
 </body>
 </html>
