its still not working

--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
     </li>
   </ul>
   <footer>Author: Reece R.</footer>
-  <!-- <script src="js/app.js"></script> -->
+  <script src="js/app.js"></script>
 </body>
 </html>
